# actions-tryout

./: README.md  pyproject.toml
.github/workflows/: push_run_pylint.yaml
actions/: main.py
