[tool.poetry]
name = "actions-tryout"
version = "0.1.0"
description = ""
authors = ["Johannes <stopwhispering314@gmail.com>"]
readme = "README.md"
packages = [{include = "action"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "*"


[tool.poetry.group.dev.dependencies]
uvicorn = "^0.20.0"
pylint = "^2.16.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
